# steal-main

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IDEA.md  PLANNING.md  PROMPT.md  README.md  package.json  pnpm-lock.yaml  vercel.json
.soroban/identity/: deployer.toml
circuits/: Nargo.toml
circuits/claim_payment/: Nargo.toml
circuits/claim_payment/src/: main.nr
circuits/common/: Nargo.toml
circuits/common/src/: lib.nr
circuits/liquidate/: Nargo.toml
circuits/open_position/: Nargo.toml  Prover.toml
circuits/repay_withdraw/: Nargo.toml
circuits/solvency/: Nargo.toml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/credit-issuer/: Cargo.toml
contracts/credit-issuer/src/: lib.rs
contracts/lending-pool/: Cargo.toml
contracts/lending-pool/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/payment-pool/: Cargo.toml
contracts/payment-pool/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
crates/ultrahonk-soroban-verifier/: Cargo.toml
docs/: ARCHITECTURE.md  CIRCUITS.md  DEMO.md  DEPLOYMENT.md  PHASE3_REAL_VERIFICATION.md
scripts/: build-circuits.sh  build-contracts.sh  deploy-node.mjs  deploy.sh  gen-vk.mjs  init-contracts.mjs  init-contracts.sh  seed-node.mjs  seed.sh  setup.sh
skills/: README.md
skills/assets/: SKILL.md
skills/client-side-groth16-proofs/: SKILL.md
skills/dapp/: SKILL.md
skills/data/: SKILL.md
skills/soroban/: SKILL.md
skills/stellar-frontend-integration/: SKILL.md
skills/stellar-private-payments-poc/: SKILL.md
skills/stellar-skills-hub/: SKILL.md
skills/stellar-zk-primitives/: SKILL.md
skills/zk-proofs/: SKILL.md
web/: .env.local  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: HealthFactorMeter.tsx  OraclePriceSlider.tsx  ProofStatus.tsx  PublicVsAuditorToggle.tsx  WalletConnect.tsx
web/lib/: payments.ts
(+47 files in other folders)
