[workspace]
members = [
    "shared",
    "verifier",
    "oracle",
    "credit-issuer",
    "lending-pool",
    "payment-pool",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
