[package]
name = "eclipse-credit-issuer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }
eclipse-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
