[package]
name = "eclipse-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
eclipse-shared = { path = "../shared" }
ultrahonk_soroban_verifier = { path = "../../crates/ultrahonk-soroban-verifier" }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils", "alloc"] }
